fixed few issues
