# backend/src/routes/health.routes.js
@@ -1,11 +1,12 @@
 const { Router } = require('express');
-const { getHealth } = require('../controllers/health.controller');
+const { getHealth, headHealth } = require('../controllers/health.controller');
 
 const otpRoutes = require('./otp.routes');
 
 const router = Router();
 
 router.get('/health', getHealth);
+router.head('/health', headHealth);
 
 router.use('/otp', otpRoutes);
 
